[package]
name = "governance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ic-kit = "0.4.3"
ic-cdk = "0.5.0"
serde = "1.0"
cap-sdk = { git = "https://github.com/Psychedelic/cap.git", branch = "cap-sdk" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }
